--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,43 @@
     <link rel="stylesheet" href="static\css\style.css">
 </head>
 <body>
-    <h1 id="Main_Title">Scrabble Assistant 1</h1>
+    <h1 id="Main_Title">Scrabble Master</h1>
+
+    <p id="opening">Welcome to Scrabble Master where you can get all combinations for your hand!</p>
+
+
+<div id="entire_keyboard">
+    <div id="keyboard1"><button type="button", class="alphabet">Q</button>
+    <button type="button", class="alphabet">W</button>
+    <button type="button", class="alphabet">E</button>
+    <button type="button", class="alphabet">R</button>
+    <button type="button", class="alphabet">T</button>
+    <button type="button", class="alphabet">Y</button>
+    <button type="button", class="alphabet">U</button>
+    <button type="button", class="alphabet">I</button>
+    <button type="button", class="alphabet">O</button>
+    <button type="button", class="alphabet">P</button></div>
+    
+   <div id="keyboard2"><button type="button", class="alphabet">A</button>
+    <button type="button", class="alphabet">S</button>
+    <button type="button", class="alphabet">D</button>
+    <button type="button", class="alphabet">F</button>
+    <button type="button", class="alphabet">G</button>
+    <button type="button", class="alphabet">H</button>
+    <button type="button", class="alphabet">J</button>
+    <button type="button", class="alphabet">K</button>
+    <button type="button", class="alphabet">L</button></div> 
+
+    <div id = "keyboard3">
+    <button type="button", class="alphabet">T</button>
+    <button type="button", class="alphabet">U</button>
+    <button type="button", class="alphabet">V</button>
+    <button type="button", class="alphabet">W</button>
+    <button type="button", class="alphabet">X</button>
+    <button type="button", class="alphabet">Y</button>
+    <button type="button", class="alphabet">Z</button></div>
+
+    </div>
     
 </body>
 </html>
