--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,18 +16,45 @@ color: white;
 display: inline-block;
 padding: 15px;}
 
-#entire_keyboard{
-     position: relative;
-     top: 300px;
-     left: 300px;
+
+
+#lettercombo{
+width: 50%;
+position: fixed;
+height: 150px;
+left: 25%;
+top: 30%;
+}
+#entire_keyboard {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     width: 50%;
+     position: absolute;
+     top: 50%;
+     left: 25%;
+     
+ }
+ 
+ #keyboard1 {
+     display: flex;
+     width: 100%;
+     justify-content: space-around;
+     margin: 10px 0 ;
+ }
+
+ #keyboard2{
+
+     display: flex;
+     width: 90%;
+     justify-content: space-around;
+     margin: 10px 0 ;
+
+ }
+ #keyboard3{
+     display: flex;
+     width: 70%;
+     justify-content: space-around;
+     margin: 10px 0 ;
 
 }
-
-#keyboard2{position: relative;
-top: 15px;
-left: 15px;}
-
-#keyboard3{position: relative;
-top: 30px;
-left: 30px;}
-
