added functionality to some of the keys

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,16 +20,17 @@
     
 
 <div id="entire_keyboard">
-    <div id="keyboard1"><button type="button", class="alphabet", id="Q">Q</button>
-    <button type="button", onclick="displaytext()", class="alphabet", id="W">W</button>
-    <button type="button", onclick="displaytext()", class="alphabet", id="E">E</button>
-    <button type="button", onclick="displaytext()",class="alphabet", id="R">R</button>
-    <button type="button", onclick="displaytext()",class="alphabet", id="T">T</button>
-    <button type="button", onclick="displaytext()",class="alphabet", id="Y">Y</button>
-    <button type="button", onclick="displaytext()",class="alphabet", id="U">U</button>
-    <button type="button", onclick="displaytext()",class="alphabet", id="I">I</button>
-    <button type="button", onclick="displaytext()",class="alphabet", id="O">O</button>
-    <button type="button", onclick="displaytext()",class="alphabet", id="P">P</button></div>
+    <div id="keyboard1">
+    <button type="button", onclick= "displaytext('Q')", class = "alphabet", id="Q">Q</button>
+    <button type="button", onclick="displaytext('W')", class="alphabet", id="W">W</button>
+    <button type="button", onclick="displaytext('E')", class="alphabet", id="E">E</button>
+    <button type="button", onclick="displaytext('R')", class="alphabet", id="R">R</button>
+    <button type="button", onclick="displaytext('T')", class="alphabet", id="T">T</button>
+    <button type="button", onclick="displaytext('Y')", class="alphabet", id="Y">Y</button>
+    <button type="button", onclick="displaytext('U')", class="alphabet", id="U">U</button>
+    <button type="button", onclick="displaytext()", class="alphabet", id="I">I</button>
+    <button type="button", onclick="displaytext()", class="alphabet", id="O">O</button>
+    <button type="button", onclick="displaytext()", class="alphabet", id="P">P</button></div>
     
    <div id="keyboard2"><button type="button", class="alphabet">A</button>
     <button type="button", class="alphabet">S</button>
@@ -48,7 +49,8 @@
     <button type="button", class="alphabet">W</button>
     <button type="button", class="alphabet">X</button>
     <button type="button", class="alphabet">Y</button>
-    <button type="button", class="alphabet">Z</button></div>
+    <button type="button", class="alphabet">Z</button>
+    <button type ="button", class ="GO">GO</button></div>
 
     </div>
     
