--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,13 @@ color: white;
 display: inline-block;
 padding: 15px;}
 
+.GO{background-color: #f3802e;
+    color: white;
+    display: inline-block;
+    padding: 15px;
+    margin-left: 30px;
 
+}
 
 #lettercombo{
 width: 50%;
