minor changes with all of the html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="static\css\style.css">
-    <script src="static\sandbox.js"></script>
+    <script src="static\sandbox.js"></script>  
 </head>
 <body>
     
@@ -28,29 +28,31 @@
     <button type="button", onclick="displaytext('T')", class="alphabet", id="T">T</button>
     <button type="button", onclick="displaytext('Y')", class="alphabet", id="Y">Y</button>
     <button type="button", onclick="displaytext('U')", class="alphabet", id="U">U</button>
-    <button type="button", onclick="displaytext()", class="alphabet", id="I">I</button>
-    <button type="button", onclick="displaytext()", class="alphabet", id="O">O</button>
-    <button type="button", onclick="displaytext()", class="alphabet", id="P">P</button></div>
+    <button type="button", onclick="displaytext('I')", class="alphabet", id="I">I</button>
+    <button type="button", onclick="displaytext('O')", class="alphabet", id="O">O</button>
+    <button type="button", onclick="displaytext('P')", class="alphabet", id="P">P</button></div>
     
    <div id="keyboard2"><button type="button", class="alphabet">A</button>
-    <button type="button", class="alphabet">S</button>
-    <button type="button", class="alphabet">D</button>
-    <button type="button", class="alphabet">F</button>
-    <button type="button", class="alphabet">G</button>
-    <button type="button", class="alphabet">H</button>
-    <button type="button", class="alphabet">J</button>
-    <button type="button", class="alphabet">K</button>
-    <button type="button", class="alphabet">L</button></div> 
+    <button type="button", onclick = "displaytext('S')", class="alphabet">S</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">D</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">F</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">G</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">H</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">J</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">K</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">L</button></div> 
 
     <div id = "keyboard3">
-    <button type="button", class="alphabet">T</button>
-    <button type="button", class="alphabet">U</button>
-    <button type="button", class="alphabet">V</button>
-    <button type="button", class="alphabet">W</button>
-    <button type="button", class="alphabet">X</button>
-    <button type="button", class="alphabet">Y</button>
-    <button type="button", class="alphabet">Z</button>
-    <button type ="button", class ="GO">GO</button></div>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">T</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">U</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">V</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">W</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">X</button>
+    <button type="button", onclick = "displaytext('S')", class="alphabet">Y</button>
+    <button type="button", onclick = "displaytext('S')",class="alphabet">Z</button>
+    
+    
+    <button type ="button", class ="GO", onclick="logtest(document.querySelector(lettercombo))">GO</button></div>
 
     </div>
     
